changes done with the extent report by bhargav